[package]
name = "req_packager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rp_server"
path = "src/server.rs"

[[bin]]
name = "rp_client"
path = "src/client.rs"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
prost = "0.14.1"
prost-types = "0.14.1"
serde = "1.0.228"
serde_json = "1.0.146"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
tonic = "0.14.2"
tonic-prost = "0.14.2"
url = "2.5.8"

[build-dependencies]
tonic-prost-build = "*"
